refactor: 정책 API 동기화 기능 추가 및 오류 처리 개선
#3
- Jackson XML 어노테이션을 JAXB 어노테이션으로 변경
- WebClient가 XML 응답을 처리할 수 있도록 JAXB 디코더/인코더 설정
- PolicyErrorResponse 클래스를 JAXB 어노테이션을 사용하도록 변경